projets/cv-online/main.tf
# Bloc principal Terraform
terraform {
  # Providers nécessaires au projet
  required_providers {
    # Provider AWS officiel HashiCorp
    aws = {
      # Source du provider AWS
      source = "hashicorp/aws"

      # Version du provider AWS
      # version = "~> 5.92"
      version = "~> 6.40"
    }
  }

  # Version minimale de Terraform requise
  required_version = ">= 1.2"
}

# Variable pour la clé d'accès AWS
variable "access_key" {
  # Type de la variable
  type = string
}

# Variable pour la clé secrète AWS
variable "secret_key" {
  # Type de la variable
  type = string
}

# Variable pour l'IP à autoriser
variable "saz_ip" {
  # Type de la variable
  type = string
}

# Configuration du provider AWS
provider "aws" {
  # Région AWS utilisée
  region = "eu-west-3"

  # Clé d'accès AWS
  access_key = var.access_key

  # Clé secrète AWS
  secret_key = var.secret_key
}

# Variable pour l'IP à autoriser
variable "ec2_hostname" {
  # Type de la variable
  type = string
}

# Variable pour l'IP à autoriser
variable "app_name" {
  # Type de la variable
  type = string
}


## Ajouter les variables en haut du fichier (ou dans variables.tf)
variable "gitlab_private_key_path" {
  type = string
  default = "~/.ssh/gitlab_rsa"
}

variable "gitlab_repo_url" {
  type = string
}

variable "project_directory" {
  type = string
}


variable "build_directory" {
  type = string
}


variable "deploy_directory" {
  type = string
}


# Recherche de l'image Ubuntu la plus récente
data "aws_ami" "ubuntu" {
  # Prendre l'AMI la plus récente correspondant au filtre
  most_recent = true

  # Filtre sur le nom de l'AMI
  filter {
    # Filtrage sur l'attribut name
    name = "name"

    # Ubuntu 24.04 Noble amd64 sur gp3
    values = ["ubuntu/images/hvm-ssd-gp3/ubuntu-noble-24.04-amd64-server-*"]
  }

  # Limiter la recherche aux AMI officielles Canonical
  owners = ["099720109477"]
}

# Récupération du VPC par défaut
data "aws_vpc" "default" {
  # Demande le VPC par défaut
  # vpc-0a6e5074c2755a2b7
  default = true
}


# Création du security group du serveur applicatif
resource "aws_security_group" "app_server_live_sg" {
  # Nom du security group
  name = var.ec2_hostname

  # Description du security group
  description = "allow inbound traffic on port HTTP 8080 and allow all outbound"

  # Association au VPC par défaut
  vpc_id = data.aws_vpc.default.id

  # Autoriser SSH depuis n'importe quelle IP
  ingress {
    # Description de la règle
    description = "Allow ssh (port 22) from all ip adress"

    # Port source
    from_port = 22

    # Port destination
    to_port = 22

    # Protocole utilisé
    protocol = "tcp"

    # Autoriser depuis toutes les IP
    cidr_blocks = [var.saz_ip]
  }

  # Autoriser HTTP depuis n'importe quelle IP
  ingress {
    # Description de la règle
    description = "Allow HTTP (port 8080) from saz_ip ip adress"

    # Port source
    from_port = 8080

    # Port destination
    to_port = 8080

    # Protocole utilisé
    protocol = "tcp"

    # Autoriser depuis toutes les IP
    cidr_blocks = [var.saz_ip]
  }


    # Autoriser tout le trafic sortant
  egress {
    # Description de la règle
    description = "Allow all outbound traffic"

    # Tous les ports
    from_port = 0

    # Tous les ports
    to_port = 0

    # Tous les protocoles
    protocol = "-1"

    # Autoriser vers toutes les IP
    cidr_blocks = ["0.0.0.0/0"]
  }

}


# Création de l'instance EC2
resource "aws_instance" "app_server_live" {
  # ID de l'AMI Ubuntu récupérée plus haut
  ami = data.aws_ami.ubuntu.id

  # Type d'instance EC2
  instance_type = "t3.micro"

  # Nom de la clé SSH AWS à utiliser
  key_name = "aws-ci-cd-deploy"

  # Association du security group à l'instance
  vpc_security_group_ids = [aws_security_group.app_server_live_sg.id]

## Encoder le script en base64 pour AWS
  user_data_base64 = base64encode(
    templatefile("${path.module}/templates/git-clone-install-projetc.sh", {
      ## Contenu de la clé privée locale
      private_key = file(var.gitlab_private_key_path)
      ## URL du repo GitLab
      gitlab_repo_url = var.gitlab_repo_url
      ## Répertoire destination sur l'instance
      project_directory = var.project_directory
      ## HostName du vps
      ec2_hostname = var.ec2_hostname

      build_directory = var.build_directory
      deploy_directory = var.deploy_directory

    })
  )
  # # Script d'installation contenant des variables Terraform, injectées via templatefile() car file() ne fait aucune interpolation
  # user_data = templatefile("${path.module}/templates/install-docker-and-compose-project.sh", {
  #     ec2_hostname = var.ec2_hostname
  #     app_name     = var.app_name
  #   })

  # Tags de l'instance
  tags = {
    # Nom affiché dans AWS pour l'instance
    Name = var.ec2_hostname
  }
}

# Afficher l'IP publique de l'instance créée
output "instance_public_ip" {
  # Description de la valeur affichée
  description = "Adresse IP publique de l'instance"

  # IP publique de l'instance EC2
  value = aws_instance.app_server_live.public_ip
}
